Old8Lang/Old8Lang.ebnf
root = statement* ;

statement = lrBlock
          | declaration
          | assignment
          | expressionStatement
          | ifStatement
          | forStatement
          | whileStatement
          | forInStatement
          | switchStatement
          | funcDeclaration
          | classDeclaration
          | funcRunStatement
          | classFuncRunStatement
          | importStatement
          | nativeStatement
          | nativeStatic
          | nativeClass
          | plusPlus
          | minusMinus
          | returnStatement
          | breakStatement
          | continueStatement
          | tryStatement
          | throwStatement ;

throwStatement = "throw" expression ;

lrBlock = "(" statement ")" ;

declaration = identifier (":" type )? "<-" expression ;
assignment = expression ":" type? "<-" expression ;
set = declaration | assignment ;

ifStatement = "if" expression block ( "elif" expression block )* ( "else" block )? ;

forStatement = "for" set "," expression "," statement block ;

whileStatement = "while" expression block ;

forInStatement = "for" identifier ( "," identifier )* "in" expression block ;

switchStatement = "switch" expression "{" caseBlock* ( "default" block )? "}" ;

caseBlock = "case" expression block ;

funcDeclaration = accessModifier* ( "func" identifier | identifier ) "(" idList? ")" ( "->" identifier )? block ;

classDeclaration = accessModifier* "class" identifier ( "extends" identifier )? classBlock ;

classBlock = "{" classMember* "}";

classMember = accessModifier* (declaration | funcDeclaration | importStatement);

accessModifier = "public" | "private" | "static" ;

funcRunStatement = identifier "(" argList? ")" ;

classFuncRunStatement = identifier "." identifier "(" argList? ")" ;

importStatement = "import" ( identifier | STRING ) ;

nativeStatement = "[" "import" STRING identifier identifier identifier? "]" ;

nativeStatic = "[" "import" STRING identifier "]" "->" STRING ;

nativeClass = "[" "import" STRING identifier "]" ;

plusPlus = identifier "++" ;

minusMinus = identifier "--" ;

returnStatement = "return" expression? ;

tryStatement = "try" block catchBlock* ( "finally" block )? ;

catchBlock = "catch" ( "(" ( identifier identifier? )? ")" )? block ;

breakStatement = "break" ;

continueStatement = "continue" ;

block = "{" statement* "}"
      | statement ;

expression = binaryExpression
           | dotExpr
           | numberOpera1
           | numberOpera2
           | boolOpera
           | primary ;

binaryExpression = expression ( ( "<" | ">" | "==" | "!=" | "<=" | ">=" ) expression )* ;

dotExpr = expression ( "." expression )* ;

numberOpera1 = expression ( ( "+" | "-" ) expression )* ;

numberOpera2 = expression ( ( "*" | "/" ) expression )* ;

boolOpera = expression ( ( "and" | "or" | "xor" ) expression )* ;

primary = stringLiteral
        | doubleLiteral
        | intLiteral
        | charLiteral
        | identifier
        | trueLiteral
        | falseLiteral
        | listInit
        | instantiate
        | stringTree
        | lambda
        | list
        | range
        | array
        | tuple
        | dictionary
        | slice
        | asStatement
        | notPrefix
        | minusPrefix
        | thisExpression ;

thisExpression = "this" ;

notPrefix = "not" primary ;

minusPrefix = "-" primary ;

stringLiteral = STRING ;

doubleLiteral = DOUBLE ;

intLiteral = INT ;

charLiteral = CHAR ;

identifier = IDENTIFIER ;

typedIdentifier = identifier (":" identifier )? ;

trueLiteral = "true" ;

falseLiteral = "false" ;

listInit = identifier "[" expression "]" ;

instantiate = identifier "(" argList " )" ;

stringTree = "$" "{" expression ("," expression )* "}" ("{" expression ("," expression )* "}")* ;

lambda = "(" idList? ")" "->" expression
       | "(" idList? ")" "->" block ;

list = "{" ( expression ("," expression )* )? "}" ;

range = "[" expression "~" expression "]" ;

array = "[" expression ("," expression )* "]" ;

tuple = "(" expression "," expression ")" ;

dictionary = "{" dicTuple ("," dicTuple )* "}" ;

dicTuple = expression ":" expression ;

(* Note: list and dictionary both use braces `{}`.
   The parser distinguishes them by checking if the first element contains a colon.
   - `{1, 2, 3}` is a list
   - `{"key": "value"}` is a dictionary
   - `{}` is an empty list
*)

slice = identifier "[" expression ":" expression "]" ;

asStatement = identifier "as" identifier ;

argList =  (expression "," expression )* ;

idList = typedIdentifier ("," typedIdentifier )* ;
